# anytag-backend

./: .env.example  .envrc  .envrc.example  .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md  docker-compose.yaml  flake.nix
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  GIT_WORKFLOW.md  WINDOWS.md
migrations/2026-03-09-165235-0000_create_users/: up.sql
migrations/2026-03-09-165255-0000_create_posts/: up.sql
migrations/2026-03-09-165312-0000_create_tags/: up.sql
migrations/2026-03-09-165330-0000_create_post_tags/: up.sql
migrations/2026-03-09-165347-0000_create_user_tag_subscriptions/: down.sql  up.sql
migrations/2026-03-09-165405-0000_create_user_user_subscriptions/: down.sql  up.sql
migrations/2026-03-09-165423-0000_create_tag_user_visibility/: down.sql  up.sql
src/: db.rs  main.rs  router.rs  schema.rs
src/dto/: mod.rs  posts.rs  tags.rs
src/handlers/: health.rs  mod.rs  posts.rs  tags.rs
src/models/: mod.rs  post.rs  relations.rs  tag.rs  user.rs
