[package]
name = "anytag-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.6", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.38"
axum = "~0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "~0.14.0"
assert_matches = "1.5"
tempfile = "3.10"
http-body-util = "0.1"
